[build-system]
requires = [
    "maturin>=1.3,<2.0",
    "numpy>=1.25"
]
build-backend = "maturin"

[project]
name = "sparse_emb_util"
version = "0.2.0"
requires-python = ">=3.8"
description = "Utilities for sparse embedding processing using Rust + Python."
readme = "README.md"
license = "Apache 2.0"
authors = [
    { name="Guangyuan Ma", email="Ma787639046@outlook.com" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
