[build-system]
requires = [
    "maturin>=1.3,<2.0",
    "numpy>=1.25"
]
build-backend = "maturin"

[project]
name = "sparse_emb_util"
requires-python = ">=3.8"
description = "Utilities for sparse embedding processing using Rust + Python."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name="Guangyuan Ma", email="Ma787639046@outlook.com" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
